--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,15 @@
 <html>
   <head>
-
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/application.css">
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/application.js"></script>
-    <script type="text/javascript" src="javascripts/handlebars.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div id="page-container">
-      <script id="task" type="text/x-handlebars-template">
-        {{#each this}}
-          <div>{{body}}</div>
-        {{/each}}
-      </script>
-
-    </div>
+    <div id="content"></div>
+    <script type="text/jsx" src="/javascripts/application.js">
+    </script>
   </body>
 </html>
